# LightUps

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
common/include/: CMakeLists.txt  constants.h  ipc_constants.h  ups_report.h
common/lightups_api/: CMakeLists.txt  i_ups_driver.cpp  i_ups_driver.h  lightups_api.cpp  lightups_api.h  lightups_api_global.h  registry_watcher.cpp  registry_watcher.h
common/plugins/nhs_driver/: CMakeLists.txt  nhs_driver.cpp  nhs_driver.h  nhs_driver.json  nhs_driver_global.h
common/plugins/template_driver/: CMakeLists.txt  template_driver.cpp  template_driver.h  template_driver.json
gui/: CMakeLists.txt  LightUpsGui_nl_NL.ts  LightUpsGui_pt_BR.ts  app_resources.qrc  main.cpp  systemtrayapp.cpp  systemtrayapp.h  upsiconmanager.cpp  upsiconmanager.h  upsstatuswindow.cpp  upsstatuswindow.h  upsstatuswindow.ui
installer/config/: config.xml  config.xml.in  controller.qs
service/: CMakeLists.txt  main.cpp  nobreak_messages.mc  ups_ipc_server.cpp  ups_ipc_server.h  ups_monitor_service.cpp  ups_monitor_service.h  windows_service.cpp  windows_service.h
